update Dockerfile and swagger
